# Longevity-Dashboard-UI

./: .env  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENT.md  CLAUDE.md  DEPLOY.md  Dockerfile  SYNTROPY_MIGRATION.md  main.py  package-lock.json  plan.md  pyproject.toml  reflex.db.bak  rxconfig.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml  sync-secrets.yml
alembic/: env.py
alembic/versions/: 095019143d02_add_category_id_fk_to_treatment.py  18965d85fae1_add_medication_fields_to_patient_.py  19187e95435f_add_processing_fields_to_checkin_and_.py  276e4fcedc15_sync_nullable_and_remove_severity_score.py  41e851475f81_drop_category_string_from_treatments.py  619f1bc3b8ff_.py  673159062141_add_health_data_extraction_tables.py  6ac5be89f361_add_username_password_to_user.py  6b1eecda4454_drop_call_summaries_table.py  6b2dc6746355_.py  7d72310139c0_.py  a553ec7f0ddc_sync_schema_with_models.py  a86fb37edbd1_add_condition_symptom_trend_datasource_.py  add1f3ecd55c_.py  cad6a4530272_add_patient_user_id_provider_user_id_to_.py  d0dab81b41cb_schema_sync.py  e0f9eb61cc21_.py  e2e557389e95_remove_has_fields_from_checkin.py  eba0a4325f60_slim_callsummary_remove_redundant_fks.py  f1a2b3c4d5e6_add_missing_fk_constraints.py
app/: admin_analytics.py  admin_cohort.py  admin_protocols.py  app.py  config.py  enums.py  login.py  models.py  patient_analytics.py  patient_intake.py  patient_protocols.py
app/components/: analytics_charts.py  layout.py  navbar.py  role_selector.py  sidebar.py
app/schemas/: checkin.py  condition.py  datasource.py  medication.py  nutrition.py  symptom.py
app/states/: analytics_state.py  auth_state.py  checkin_state.py  cohort_state.py  condition_state.py  datasource_state.py  global_state.py  medication_state.py  nutrition_state.py  patient_state.py  protocol_state.py  symptom_state.py
docs/: DEBUG.md  VERSION_MANAGEMENT.md  call_logs_api.md  vlogs_agent_setup.md
envs/: .env.base  .env.dev  .env.prod  .env.secrets.example  .env.test  README.md
longevity_clinic/: longevity_clinic.py
longevity_dashboard/: longevity_dashboard.py
reflex-railway-deploy/: README.md  rxconfig.py
scripts/: bump_version.py  db_migrate.py  deploy_longevity_clinic.sh  export_data.py  export_schema.py  fix_sequences.py  load_demo_data.py  load_seed_data.py  reset_latest_call_log.py  reset_postgres.py  run_migrations.py  sync_env_secrets.sh  sync_github_secrets.sh
scripts/seeding/: base.py  (+12 more)
tests/: __init__.py  conftest.py  test_call_logs_api.py  test_checkin_integration.py  test_database_seeding.py  test_demo_data.py  test_vlogs_agent.py
(+318 files in other folders)
