[project]
name = "longclinic"
version = "0.2.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "reflex>=0.8.20",
    "reflex-calendar",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.0.0",
    "reflex-audio-capture",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "psycopg2-binary>=2.9.0",
    "bcrypt>=4.0.0",
    "tzdata>=2025.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "sqlalchemy>=2.0.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

# Ruff configuration - SWP style
[tool.ruff]
target-version = "py313"
line-length = 88
indent-width = 4

[tool.ruff.lint]
# SWP style: Simple, Workable, Pythonic
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # module import not at top (needed for reflex setup)
    "B008",   # function call in default argument (common in FastAPI/Reflex)
    "B904",   # raise from (too strict)
    "SIM108", # ternary operator (readability preference)
    "RUF012", # mutable class default (rx.State pattern uses this)
    "RUF013", # implicit optional (too strict for this codebase)
    "F811",   # redefinition (needed for overloads/re-exports)
]

[tool.ruff.lint.isort]
known-first-party = ["longevity_clinic"]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
